# kamen-usb

./: README.md  pyproject.toml
drive/: main.py
other/: autorun.inf
src/: main.py
